feat(serviceDiscovery):add dev_log to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
-
 src/main/resources/script/dev_log.log.2024-07-09.0.gz
 src/main/resources/script/*
+src/main/resources/script/dev_log.log
+src/main/resources/script/
