--- a/dev.env
+++ b/dev.env
@@ -4,7 +4,7 @@ KAFKA_HOSTNAME=localhost
 DB_HOSTNAME=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_PASSWORD=123456
 
 # Môi trường chạy
 ENVIRONMENT=dev
