--- a/proxy-client/src/main/resources/application.yml
+++ b/proxy-client/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
   port: 8900
 
 company:
-  name: techhub
+  name: dbiz
   version: 1.0.0
 spring:
   zipkin:
@@ -40,28 +40,4 @@ management:
     health:
       show-details: always
 
-
-#springdoc:
-#  enable-native-support: true
-#  api-docs:
-#    enabled: true
-#    path: /v3/api-docs
-#  swagger-ui:
-#    enabled: true
-#    path: /swagger-ui.html
-#    config-url: /v3/api-docs/swagger-config
-
-#swagger
-#eureka:
-#  client:
-#    register-with-eureka: true
-#    fetch-registry: true
-#  instance:
-#    hostname: localhost
-
-
-
-
-
-
-
+#swagger and eureka config can be added per env profiles
