--- a/user-service/src/main/resources/application-test.yml
+++ b/user-service/src/main/resources/application-test.yml
@@ -1,29 +1,32 @@
-
 server:
-  port: 8761
+  port: 0
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
+spring:
+  application:
+    name: USER-SERVICE-TEST
+  datasource:
+    url: jdbc:h2:mem:userservice;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: ''
+  jpa:
+    hibernate:
+      ddl-auto: none
+    database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: false
+  mail:
+    host: localhost
+    port: 1025
+    username: test
+    password: test
+
+logging:
+  level:
+    org:
+      springframework: WARN
+      hibernate: WARN
 
 eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
-
-logging:
-  level:
-    org:
-      hibernate:
-        SQL: INFO
-      springframework:
-        web: INFO
-        data: INFO
-      boot:
-        autoconfigure:
-          data:
-            rest: INFO
-            jpa: INFO
-            orm: INFO
