--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 server:
   port: 8700
 
@@ -7,6 +6,19 @@ spring:
     base-url: ${SPRING_ZIPKIN_BASE_URL:http://${HOST_IP_ADDRESS:localhost}:9411/}
   application:
     name: USER-SERVICE
+  datasource:
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/techhub}
+    username: ${SPRING_DATASOURCE_USERNAME:postgres}
+    password: ${SPRING_DATASOURCE_PASSWORD:postgres}
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQL10Dialect
+        format_sql: true
+    show-sql: false
 
 resilience4j:
   circuitbreaker:
@@ -26,13 +38,6 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
-#  instance:
-#    hostname: localhost
-#  client:
-#    registerWithEureka: false
-#    fetchRegistry: false
-#    serviceUrl:
-#      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
 
 management:
   endpoints:
@@ -61,8 +66,3 @@ logging:
             rest: INFO
             jpa: INFO
             orm: INFO
-
-
-
-
-
