--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: user-service
+    name: USER-SERVICE
   datasource:
     url: jdbc:postgresql://localhost:5432/techhub
     username: postgres
@@ -38,8 +38,11 @@ jwt:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka/
+    fetch-registry: true
+    register-with-eureka: true
   instance:
+    hostname: localhost
     prefer-ip-address: true
 
 logging:
