--- a/blog-service/src/main/resources/application.yml
+++ b/blog-service/src/main/resources/application.yml
@@ -6,8 +6,8 @@ server:
 spring:
   application:
     name: BLOG-SERVICE
-  profiles:
-    active: ${SPRING_PROFILES_ACTIVE:dev}
+#  profiles:
+#    active: ${SPRING_PROFILES_ACTIVE:dev}
   zipkin:
     base-url: ${SPRING_ZIPKIN_BASE_URL:http://${HOST_IP_ADDRESS:localhost}:9411/}
   config:
