--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
         add-to-simple-url-handler-mapping: true
         cors-configurations:
           '[/**]':
-            allowed-origins: "${CLIENT_HOST:http://${HOST_IP_ADDRESS:localhost}:4200}"
+            allowed-origins: "${CLIENT_HOST:http://${HOST_IP_ADDRESS:localhost}:3000}"
             allowed-headers: "*"
             exposed-headers: "*"
             allow-credentials: true
@@ -60,6 +60,11 @@ spring:
           uri: lb://USER-SERVICE
           predicates:
             - Path=/user-service/**
+        # Expose OAuth2 endpoints of USER-SERVICE directly at gateway root
+        - id: USER-SERVICE-OAUTH2
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/oauth2/**, /login/oauth2/**, /api/oauth2/**
         - id: PROXY-CLIENT
           uri: lb://PROXY-CLIENT
           predicates:
