--- a/blog-service/src/main/resources/application-test.yml
+++ b/blog-service/src/main/resources/application-test.yml
@@ -1,45 +1,35 @@
-
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-
 spring:
   datasource:
-    url: jdbc:h2:mem:ecommerce_dev_db;DB_CLOSE_ON_EXIT=FALSE
-    username: sa
-    password: 
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/techhub}
+    username: ${SPRING_DATASOURCE_USERNAME:postgres}
+    password: ${SPRING_DATASOURCE_PASSWORD:123456}
+    driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create-drop
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
-        use_sql_comments: true
+        dialect: com.techhub.app.commonservice.jpa.PostgreSQLEnumDialect
         format_sql: true
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-  #flyway:
-  #  baseline-on-migrate: true
-  #  enabled: true
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    consumer:
+      group-id: ${KAFKA_CONSUMER_GROUP:blog-service}
+      auto-offset-reset: ${KAFKA_AUTO_OFFSET_RESET:latest}
+      properties:
+        spring.json.trusted.packages: ${KAFKA_CONSUMER_TRUSTED_PACKAGES:*}
 
 logging:
   level:
-    org:
-      hibernate:
-        SQL: DEBUG
-      springframework:
-        web: DEBUG
-        data: DEBUG
-      boot:
-        autoconfigure:
-          data:
-            rest: DEBUG
-            jpa: DEBUG
-            orm: DEBUG
+    com.techhub.app.blogservice: DEBUG
 
+kafka:
+  bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+  topics:
+    email: ${KAFKA_EMAIL_TOPIC:email-notifications}
+  consumer:
+    group-id: ${KAFKA_CONSUMER_GROUP:blog-service}
+    concurrency: ${KAFKA_CONSUMER_CONCURRENCY:3}
+    ack-mode: ${KAFKA_CONSUMER_ACK_MODE:MANUAL_IMMEDIATE}
+    trusted-packages: ${KAFKA_CONSUMER_TRUSTED_PACKAGES:*}
