--- a/blog-service/src/main/resources/application.yml
+++ b/blog-service/src/main/resources/application.yml
@@ -1,46 +1,54 @@
 server:
-  servlet:
-    context-path: /blog-service
-  port: 8081
+  port: 8083
 
 spring:
   application:
     name: BLOG-SERVICE
-#  profiles:
-#    active: ${SPRING_PROFILES_ACTIVE:dev}
-  zipkin:
-    base-url: ${SPRING_ZIPKIN_BASE_URL:http://${HOST_IP_ADDRESS:localhost}:9411/}
-  config:
-    import: ${SPRING_CONFIG_IMPORT:optional:configserver:http://${HOST_IP_ADDRESS:localhost}:9296}
+  profiles:
+    active: prod
+  datasource:
+    url: jdbc:postgresql://localhost:5432/techhub
+    username: postgres
+    password: 123456
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+    properties:
+      hibernate:
+        dialect: com.techhub.app.commonservice.jpa.PostgreSQLEnumDialect
+        format_sql: true
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    consumer:
+      group-id: ${KAFKA_CONSUMER_GROUP:blog-service}
+      auto-offset-reset: ${KAFKA_AUTO_OFFSET_RESET:latest}
+      properties:
+        spring.json.trusted.packages: ${KAFKA_CONSUMER_TRUSTED_PACKAGES:*}
 
 eureka:
   client:
-    register-with-eureka: true
-    fetch-registry: true
     service-url:
-      defaultZone: ${EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE:http://${HOST_IP_ADDRESS:localhost}:8761/eureka}
+      defaultZone: http://localhost:8761/eureka/
+    fetch-registry: true
+    register-with-eureka: true
   instance:
+    hostname: localhost
     prefer-ip-address: true
-    ip-address: ${HOST_IP_ADDRESS:localhost}
 
-resilience4j:
-  circuitbreaker:
-    instances:
-      favouriteService:
-        register-health-indicator: true
-        event-consumer-buffer-size: 10
-        automatic-transition-from-open-to-half-open-enabled: true
-        failure-rate-threshold: 50
-        minimum-number-of-calls: 5
-        permitted-number-of-calls-in-half-open-state: 3
-        sliding-window-size: 10
-        wait-duration-in-open-state: 5s
-        sliding-window-type: COUNT_BASED
+logging:
+  level:
+    com.techhub.app.blogservice: INFO
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 
-management:
-  health:
-    circuitbreakers:
-      enabled: true
-  endpoint:
-    health:
-      show-details: always
+kafka:
+  bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+  topics:
+    email: ${KAFKA_EMAIL_TOPIC:email-notifications}
+  consumer:
+    group-id: ${KAFKA_CONSUMER_GROUP:blog-service}
+    concurrency: ${KAFKA_CONSUMER_CONCURRENCY:3}
+    ack-mode: ${KAFKA_CONSUMER_ACK_MODE:MANUAL_IMMEDIATE}
+    trusted-packages: ${KAFKA_CONSUMER_TRUSTED_PACKAGES:*}
