--- a/course-service/pom.xml
+++ b/course-service/pom.xml
@@ -50,7 +50,7 @@
 		<dependency>
 			<groupId>com.techhub.app</groupId>
 			<artifactId>common-service</artifactId>
-			<version>v0.0.1-SNAPSHOT</version>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
