--- a/proxy-client/pom.xml
+++ b/proxy-client/pom.xml
@@ -18,6 +18,12 @@
 		<spring-cloud.version>2021.0.9</spring-cloud.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<!-- Common Service Dependency (but exclude UserContextInterceptor from scanning) -->
 		<dependency>
 			<groupId>com.techhub.app</groupId>
