--- a/user-service/src/main/resources/application-test.yml
+++ b/user-service/src/main/resources/application-test.yml
@@ -1,32 +1,35 @@
-server:
-  port: 0
-
 spring:
-  application:
-    name: USER-SERVICE-TEST
   datasource:
-    url: jdbc:h2:mem:userservice;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: ''
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/techhub}
+    username: ${SPRING_DATASOURCE_USERNAME:postgres}
+    password: ${SPRING_DATASOURCE_PASSWORD:123456}
+    driver-class-name: org.postgresql.Driver
   jpa:
+    show-sql: true
     hibernate:
-      ddl-auto: none
-    database-platform: org.hibernate.dialect.H2Dialect
-    show-sql: false
-  mail:
-    host: localhost
-    port: 1025
-    username: test
-    password: test
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect: com.techhub.app.commonservice.jpa.PostgreSQLEnumDialect
+        format_sql: true
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    consumer:
+      group-id: ${KAFKA_CONSUMER_GROUP:user-service}
+      auto-offset-reset: ${KAFKA_AUTO_OFFSET_RESET:latest}
+      properties:
+        spring.json.trusted.packages: ${KAFKA_CONSUMER_TRUSTED_PACKAGES:*}
 
 logging:
   level:
-    org:
-      springframework: WARN
-      hibernate: WARN
+    com.techhub.app.userservice: DEBUG
 
-eureka:
-  client:
-    register-with-eureka: false
-    fetch-registry: false
+kafka:
+  bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+  topics:
+    email: ${KAFKA_EMAIL_TOPIC:email-notifications}
+  consumer:
+    group-id: ${KAFKA_CONSUMER_GROUP:user-service}
+    concurrency: ${KAFKA_CONSUMER_CONCURRENCY:3}
+    ack-mode: ${KAFKA_CONSUMER_ACK_MODE:MANUAL_IMMEDIATE}
+    trusted-packages: ${KAFKA_CONSUMER_TRUSTED_PACKAGES:*}
