--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -60,6 +60,10 @@ spring:
           uri: lb://USER-SERVICE
           predicates:
             - Path=/user-service/**
+        - id: FILE-SERVICE
+          uri: lb://FILE-SERVICE
+          predicates:
+            - Path=/file-service/**
         # Expose OAuth2 endpoints of USER-SERVICE directly at gateway root
         - id: USER-SERVICE-OAUTH2
           uri: lb://USER-SERVICE
