--- a/proxy-client/pom.xml
+++ b/proxy-client/pom.xml
@@ -82,6 +82,18 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- Feign Form for Multipart/Form-Data support -->
+		<dependency>
+			<groupId>io.github.openfeign.form</groupId>
+			<artifactId>feign-form</artifactId>
+			<version>3.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.openfeign.form</groupId>
+			<artifactId>feign-form-spring</artifactId>
+			<version>3.8.0</version>
+		</dependency>
+
 		<!-- Test Dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
