--- a/blog-service/src/main/resources/application.yml
+++ b/blog-service/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   profiles:
     active: prod
   datasource:
-    url: jdbc:postgresql://localhost:5432/techhub1
+    url: jdbc:postgresql://localhost:5432/techhub3
     username: postgres
     password: 123456
     driver-class-name: org.postgresql.Driver
@@ -21,6 +21,11 @@ spring:
         format_sql: true
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:29092}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring.json.add.type.headers: false
     consumer:
       group-id: ${KAFKA_CONSUMER_GROUP:blog-service}
       auto-offset-reset: ${KAFKA_AUTO_OFFSET_RESET:latest}
