--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8084
+  port: 8088
 
 spring:
   application:
@@ -7,7 +7,7 @@ spring:
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:dev}
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/techhub1}
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/techhub3}
     username: ${SPRING_DATASOURCE_USERNAME:postgres}
     password: ${SPRING_DATASOURCE_PASSWORD:123456}
     driver-class-name: org.postgresql.Driver
@@ -22,11 +22,24 @@ spring:
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:29092}
     consumer:
-      group-id: ${KAFKA_CONSUMER_GROUP:notification-service}
+      group-id: ${KAFKA_CONSUMER_GROUP:notification-service-v3}
       auto-offset-reset: ${KAFKA_AUTO_OFFSET_RESET:latest}
     producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       properties:
         spring.json.add.type.headers: false
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${MAIL_USERNAME:vancongtoan09102004@gmail.com}
+    password: ${MAIL_PASSWORD:mkeptlidrexbdwlm}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
   zipkin:
     base-url: ${SPRING_ZIPKIN_BASE_URL:http://${HOST_IP_ADDRESS:localhost}:9411/}
 
@@ -65,7 +78,7 @@ kafka:
     email: ${KAFKA_EMAIL_TOPIC:email-notifications}
     notification: ${KAFKA_NOTIFICATION_TOPIC:notification-commands}
   consumer:
-    group-id: ${KAFKA_CONSUMER_GROUP:notification-service}
+    group-id: ${KAFKA_CONSUMER_GROUP:notification-service-v3}
     concurrency: ${KAFKA_CONSUMER_CONCURRENCY:3}
     ack-mode: ${KAFKA_CONSUMER_ACK_MODE:MANUAL_IMMEDIATE}
     trusted-packages: ${KAFKA_CONSUMER_TRUSTED_PACKAGES:*}
