--- a/blog-service/src/main/resources/application-dev.yml
+++ b/blog-service/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/techhub1}
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/techhub3}
     username: ${SPRING_DATASOURCE_USERNAME:postgres}
     password: ${SPRING_DATASOURCE_PASSWORD:123456}
     driver-class-name: org.postgresql.Driver
@@ -14,6 +14,11 @@ spring:
         format_sql: true
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:29092}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring.json.add.type.headers: false
     consumer:
       group-id: ${KAFKA_CONSUMER_GROUP:blog-service}
       auto-offset-reset: ${KAFKA_AUTO_OFFSET_RESET:latest}
