--- a/user-service/src/main/resources/application-prod.yml
+++ b/user-service/src/main/resources/application-prod.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/techhub1}
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/techhub3}
     username: ${SPRING_DATASOURCE_USERNAME:postgres}
     password: ${SPRING_DATASOURCE_PASSWORD:123456}
     driver-class-name: org.postgresql.Driver
@@ -28,6 +28,11 @@ kafka:
   bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:29092}
   topics:
     email: ${KAFKA_EMAIL_TOPIC:email-notifications}
+  producer:
+    key-serializer: org.apache.kafka.common.serialization.StringSerializer
+    value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    properties:
+      spring.json.add.type.headers: false
   consumer:
     group-id: ${KAFKA_CONSUMER_GROUP:user-service}
     concurrency: ${KAFKA_CONSUMER_CONCURRENCY:3}
