--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   profiles:
     active: prod
   datasource:
-    url: jdbc:postgresql://localhost:5432/techhub3
+    url: jdbc:postgresql://localhost:5432/techhub
     username: postgres
     password: 123456
     driver-class-name: org.postgresql.Driver
@@ -101,3 +101,15 @@ app:
   oauth2:
     # Frontend URL to redirect after successful OAuth2 login
     authorized-redirect-uris: ${APP_OAUTH2_REDIRECT_URI:http://localhost:3000/oauth2/redirect}
+
+# Swagger/OpenAPI Configuration
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+    enabled: true
+  swagger-ui:
+    path: /swagger-ui.html
+    enabled: true
+    operations-sorter: method
+    tags-sorter: alpha
+    show-actuator: false
