--- a/blog-service/src/main/resources/application.yml
+++ b/blog-service/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   profiles:
     active: prod
   datasource:
-    url: jdbc:postgresql://localhost:5432/techhub3
+    url: jdbc:postgresql://localhost:5432/techhub
     username: postgres
     password: 123456
     driver-class-name: org.postgresql.Driver
@@ -57,3 +57,15 @@ kafka:
     concurrency: ${KAFKA_CONSUMER_CONCURRENCY:3}
     ack-mode: ${KAFKA_CONSUMER_ACK_MODE:MANUAL_IMMEDIATE}
     trusted-packages: ${KAFKA_CONSUMER_TRUSTED_PACKAGES:*}
+
+# Swagger/OpenAPI Configuration
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+    enabled: true
+  swagger-ui:
+    path: /swagger-ui.html
+    enabled: true
+    operations-sorter: method
+    tags-sorter: alpha
+    show-actuator: false
