--- a/file-service/pom.xml
+++ b/file-service/pom.xml
@@ -89,6 +89,12 @@
             <artifactId>hibernate-types-52</artifactId>
             <version>2.21.1</version>
         </dependency>
+        <!-- Springdoc OpenAPI (Swagger) -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.15</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
