--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -44,6 +44,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- Springdoc OpenAPI (Swagger) -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.15</version>
+		</dependency>
 	</dependencies>
 		<dependencyManagement>
 		<dependencies>
@@ -54,6 +60,12 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+<!-- Springdoc OpenAPI (Swagger) -->
+<dependency>
+<groupId>org.springdoc</groupId>
+<artifactId>springdoc-openapi-ui</artifactId>
+<version>1.6.15</version>
+</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
