--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -118,9 +118,13 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
-	</dependencies>
-
-	<dependencyManagement>
+		<!-- Springdoc OpenAPI (Swagger) -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.15</version>
+		</dependency>
+	</dependencies>	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
@@ -129,6 +133,12 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+<!-- Springdoc OpenAPI (Swagger) -->
+<dependency>
+<groupId>org.springdoc</groupId>
+<artifactId>springdoc-openapi-ui</artifactId>
+<version>1.6.15</version>
+</dependency>
 		</dependencies>
 	</dependencyManagement>
 
